<resources>
    <string name="app_name">prac8</string>
    <string name="number_1">Number 1:</string>
    <string name="number_2">Number 2:</string>
    <string name="enter_number_1">Enter Number 1</string>
    <string name="enter_number_2">Enter Number 2</string>
    <string name="output">OUTPUT</string>
    <string name="div">DIV</string>
    <string name="add">ADD</string>
    <string name="sub">SUB</string>
    <string name="mul">MUL</string>
</resources>